--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -33,7 +33,7 @@ jobs:
         run: npm install --global surge
 
       - name: Deploy to Surge
-        run: surge ./build reactapp.surge.sh --token ${{ secrets.SURGE_TOKEN }}
+        run: surge ./build basim-reactapp.surge.sh --token ${{ secrets.SURGE_TOKEN }}
 
       - name: Run Tests
         run: npm test
